--- a/philo/.vscode/launch.json
+++ b/philo/.vscode/launch.json
@@ -15,7 +15,7 @@
 				"200",
 				"100"
 			],
-			"stopAtEntry": false,
+			"stopAtEntry": true,
 			"cwd": "${fileDirname}",
 			"environment": [],
 			"externalConsole": false,
