--- a/philo/Makefile
+++ b/philo/Makefile
@@ -13,7 +13,8 @@ OBJS	=	$(SRCS:.c=.o)
 
 CC		=	gcc
 
-CFLAGS	=	-Wall -Wextra -Werror -g -I. -pthread
+# CFLAGS	=	-Wall -Wextra -Werror -g -I. -pthread
+CFLAGS	=	-g -I. -pthread
 
 all 	:	$(NAME)
 
